--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,4 +1,3 @@
-
 @import 'variables';
 @import 'libs/normalize';
 @import 'components/all';
@@ -14,25 +13,47 @@ body {
   margin: 50px auto;
   border-radius: 10px;
   max-width: 1400px;
+  @media (max-width: 645px) {
+    width: calc(100vw - 20px);
+    margin-top: 15px;
+  }
 }
 
 .content {
-  padding: 40px 0;
+  padding: 40px 20px;
 
   &__title {
     margin: 35px 0;
   }
 
   &__items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 11px;
+
+    @media (max-width: 1400px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+    @media (max-width: 1060px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: 750px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 
   &__top {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media (max-width: 1260px) {
+      flex-direction: column;
+      .categories {
+        margin-bottom: 30px;
+      }
+    }
   }
 }
 
@@ -103,6 +124,9 @@ body {
         color: darken($color: #b6b6b6, $amount: 50);
       }
     }
+  }
+  .content__items {
+    display: block;
   }
 
   &__item {
