--- a/src/scss/components/_sort.scss
+++ b/src/scss/components/_sort.scss
@@ -5,9 +5,15 @@
   &__label {
     display: flex;
     align-items: center;
+    @media (max-width: 750px) {
+      flex-direction: column;
+    }
 
     svg {
       margin-right: 8px;
+      @media (max-width: 750px) {
+        display: none;
+      }
     }
 
     b {
